alterando tamanho max

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,19 @@
-<p class="text-center fw-bold my-3">
-  050958 - YAH SHENG CHONG COMERCIO E INDUSTRIA LTDA - 06/2024
-</p>
+<div class="limite">
+  <p class="text-center fw-bold my-3">
+    050958 - YAH SHENG CHONG COMERCIO E INDUSTRIA LTDA - 06/2024
+  </p>
 
-<div class="conteudo">
+  <div class="conteudo">
 
-  <div class="d-flex justify-content-between align-items-center">
-    <div class="fs-4">Auditor ICMS / IPI</div>
-    <div class="fs-7 align-items-center">Escrita Fiscal / Auditoria / ICMS-IPI / Auditor ICMS-IPI</div>
+    <div class="d-flex justify-content-between align-items-center">
+      <div class="fs-4">Auditor ICMS / IPI</div>
+      <div class="fs-7 align-items-center">Escrita Fiscal / Auditoria / ICMS-IPI / Auditor ICMS-IPI</div>
+    </div>
+
+    <app-header></app-header>
+
+    <app-auditor-icms></app-auditor-icms>
+
   </div>
-
-  <app-header></app-header>
-
-  <app-auditor-icms></app-auditor-icms>
-
 </div>
 
