--- a/src/app/auditor-icms/auditor-icms.component.html
+++ b/src/app/auditor-icms/auditor-icms.component.html
@@ -1,4 +1,4 @@
-<div class="card p-4 mt-4 mb-5">
+<div class="card p-4 mt-4 mb-5 shadow-sm">
   <ul ngbNav #nav="ngbNav" [(activeId)]="navAtivo" class="nav-tabs">
     <li [ngbNavItem]="1" class="">
       <button class="nav-icms fs-6" ngbNavLink>ICMS ENTRADAS</button>
