--- a/src/app/auditor-icms/auditor-icms-saidas/auditor-icms-saidas.component.html
+++ b/src/app/auditor-icms/auditor-icms-saidas/auditor-icms-saidas.component.html
@@ -27,7 +27,7 @@
                   </tr>
             </thead>
             <tbody>
-                <tr *ngFor="resumo of notas">
+                <tr *ngFor="let resumo of notas">
                     <td>{{ resumo.cfop }}</td>
                     <td>{{ resumo.vlCont }}</td>
                     <td>{{ resumo.base }}</td>
